[package]
name = "policy-derive"
version = "0.1.0"
authors = ["Jung-Kwang Lee <ntoskrnl7@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.74"
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.21"
toml = "0.7.3"
